# tui-math

./: .gitignore  Cargo.toml  README.md  demo.tape  devenv.nix
.github/workflows/: release.yml
examples/: canvas_equation.rs  debug_canvas.rs  debug_canvas2.rs  debug_mathml.rs  render_to_text.rs  simple.rs  single_equation.rs  test_lim.rs
src/: canvas_widget.rs  lib.rs  main.rs  mathbox.rs  renderer.rs  unicode_maps.rs  widget.rs
