[package]
name = "tui-math"
version = "0.1.0"
edition = "2021"
description = "Render LaTeX math beautifully in terminal UIs with ratatui"
license = "MIT"
repository = "https://github.com/onnimonni/tui-math"
keywords = ["math", "latex", "ratatui", "tui", "terminal"]
categories = ["command-line-interface", "mathematics", "rendering"]

[dependencies]
latex2mathml = "0.2"
roxmltree = "0.20"
once_cell = "1.19"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
color-eyre = "0.6"
